# event-based-odomety

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_submodules.sh  install_dependencies.sh  plots_and_visualization.ipynb  run_format.sh
cmake_modules/: FindTBB.cmake
common/: CMakeLists.txt
common/include/common/: camera_model.h  data_types.h  geometry.h  utils.h
common/test/: CMakeLists.txt  camera_model_test.cpp
implementation/: CMakeLists.txt
implementation/feature_tracker/: CMakeLists.txt
implementation/feature_tracker/include/feature_tracker/: contrast_functor.h  contrast_noise_functor.h  feature_detector.h  flow_estimator.h  local_parameterization_se2.hpp  optimizer.h  optimizer_cost.h  patch.h  total_variance.h
implementation/feature_tracker/src/: feature_detector.cpp  flow_estimator.cpp  optimizer.cpp  patch.cpp
implementation/feature_tracker/test/: CMakeLists.txt  feature_detector_test.cpp  optimizer_test.cpp  patch_test.cpp
implementation/test/: dummy_test.cpp
implementation/visual_odometry/: CMakeLists.txt
implementation/visual_odometry/include/visual_odometry/: aligner.h  keyframe.h  local_parameterization_se3.hpp  reprojection_error.h  triangulation.h  visual_odometry.h
implementation/visual_odometry/src/: aligner.cpp  keyframe.cpp  triangulation.cpp  visual_odometry.cpp
implementation/visual_odometry/test/: CMakeLists.txt  triangulation_test.cpp  visual_odometry_test.cpp
src/: CMakeLists.txt
src/common/include/common/: data_types.h
src/dataset_reader/: CMakeLists.txt
src/dataset_reader/include/dataset_reader/: dataset_reader.h
src/dataset_reader/src/: davis240c_reader.cpp
src/dataset_reader/test/: CMakeLists.txt  davis240c_reader_test.cpp
src/dataset_reader/test/test_data/: events.txt  groundtruth.txt  images.txt
src/implementation/: CMakeLists.txt
tools/: CMakeLists.txt
tools/dataset_reader/: CMakeLists.txt
tools/dataset_reader/include/dataset_reader/: dataset_reader.h  davis240c_reader.h  drone_racing_reader.h  mapped_file.h
tools/dataset_reader/src/: davis240c_reader.cpp  drone_racing_reader.cpp  mapped_file.cpp
tools/dataset_reader/test/: CMakeLists.txt  davis240c_reader_test.cpp  mapped_file_test.cpp
tools/dataset_reader/test/test_data/: calib.txt  events.txt  groundtruth.txt  images.txt
tools/evaluator/: CMakeLists.txt
tools/evaluator/include/evaluator/: evaluator.h
tools/evaluator/src/: evaluator.cpp
tools/evaluator/test/: CMakeLists.txt  evaluator_test.cpp
tools/evaluator/tools/: traj_visualizer.py
tools/replayer/: CMakeLists.txt
tools/replayer/include/replayer/: replayer.h
tools/replayer/src/: replayer.cpp
tools/replayer/test/: CMakeLists.txt  replayer_test.cpp
tools/replayer/test/test_data/: events.txt  groundtruth.txt  images.txt
tools/visualizer/: CMakeLists.txt  main.cpp
tools/visualizer/include/visualizer/: scene_helper.h  visualizer.h
tools/visualizer/src/: visualizer.cpp
